--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Jogo da Memória</title>
 </head>
-<body>
+<body onload="perguntarQtdCartas();">
     <div class="titulo">PARROT CARD GAME</div>
     <div class="container-jogo">
         <div class="carta">
