Virar carta com clique implementado

--- a/index.html
+++ b/index.html
@@ -13,28 +13,18 @@
 </head>
 <body onload="perguntarQtdCartas();">
     <div class="titulo">PARROT CARD GAME</div>
+
     <div class="container-jogo">
-        <div class="carta">
-            <img src="images/front.png"/>
+        <div class="linha1-cartas">
+            
         </div>
 
-        <div class="carta">
-            <img src="images/front.png"/>
+        <div class="linha2-cartas">
+            
         </div>
-
-        <div class="carta">
-            <img src="images/front.png"/>
-        </div>
-
-        <div class="carta">
-            <img src="images/front.png"/>
-        </div>
-
     </div>
 
 
-
-
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
