Bônus do relógio implementado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body onload="perguntarQtdCartas();">
     <div class="titulo">PARROT CARD GAME</div>
-
+    <div class="relogio">0</div>
     <div class="container-jogo">
         <div class="linha1-cartas">
             
